--- a/app/routes/education._index/style.css
+++ b/app/routes/education._index/style.css
@@ -40,6 +40,21 @@
     transition: transform 120ms ease;
   }
 
+  .card-component {
+    height: 100%;
+
+    &__children a {
+      color: var(--accent);
+      text-decoration: none;
+
+      &:hover,
+      &:focus-visible {
+        text-decoration: underline;
+        outline: none;
+      }
+    }
+  }
+
   &__card-link {
     text-decoration: none;
     color: inherit;
@@ -113,19 +128,6 @@
     flex-direction: column;
     gap: var(--space-20);
     width: 100%;
-  }
-
-  .card-component {
-    &__children a {
-      color: var(--accent);
-      text-decoration: none;
-
-      &:hover,
-      &:focus-visible {
-        text-decoration: underline;
-        outline: none;
-      }
-    }
   }
 }
 
